# MOON_MUC_RM_CV

./: README.md
CBD_RM_CV(V1.0)/: CMakeLists.txt  armor_detect_demo.cpp  windmill_detect_demo.cpp
CBD_RM_CV(V1.0)/armor/src/: ArmorDetect.cpp  ArmorDetect.h
CBD_RM_CV(V1.1t)/: .gitmodules  CMakeLists.txt  README.md  armor_detect_demo.cpp  windmill_detect_demo.cpp
CBD_RM_CV(V1.1t)/armor/src/: Armor.h  ArmorDetect.cpp  ArmorDetect.h  Energy.h  SVM.cpp  svm.h  tool.cpp
CBD_RM_CV(V1.1t)/config/: config.hpp
CBD_RM_CV(V1.1t)/message/src/: AngleSolve.h  MessageSend.h
